# Bnote

./: README.md  bun.lockb  package-lock.json  package.json
src/: App.vue  main.ts
src-tauri/: Cargo.toml  note.sql  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/db/: func.rs  funcs.rs  init.rs  mod.rs  models.rs
src-tauri/src/db/funcs/: categories.rs  note.rs  total.rs
src-tauri/src/entity/: category.rs  mod.rs  note.rs  prelude.rs  total_info.rs
src-tauri/src/server/: categories_server.rs  mod.rs  note_server.rs  server.rs  total_server.rs
src/components/: Blockd.vue  Editor.vue  Empty.vue  Func.vue  Slide.vue
src/components/notes/: Categories.vue  NewNote.vue  NoteList.vue  TimeLine.vue
src/models/: Categories.ts  Note.ts
src/plugins/: vuetify.ts
src/router/: router.ts
src/router/func_router/: router.ts
src/store/: index.ts
src/utils/: note.ts
src/views/: Info.vue  NoteList.vue  Notelist.vue  Notes.vue  Search.vue  Setting.vue
