[package]
name = "bnote"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
sea-orm = { version = "0.12", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
] }
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
color-eyre = "0.6.2"
tokio = { version = "1.32.0", features = ["full"] }
tokio-util = "0.7.9"


[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
